# nft-wikepedia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/common/: Cargo.toml
api/db/: Cargo.toml
api/db/src/: lib.rs
api/src/: main.rs
artverse-archive/: README.md  index.html  tailwind.config.ts
artverse-archive/public/: ChatWidget.js
artverse-archive/src/: index.css
artverse-archive/src/components/: FilterSidebar.tsx  LoadMoreButton.tsx  NFTCard.tsx  NFTDetailModal.tsx  NFTGrid.tsx  NFTGridContent.tsx  NFTGridHeader.tsx  SearchBar.tsx
artverse-archive/src/hooks/: useNFTData.tsx
artverse-archive/src/pages/: Index.tsx
backfill_script/: Cargo.toml  Dockerfile
backfill_script/src/: main.rs
db/: Cargo.toml
db/migrations/: 20240717_create_nft_tables.sql
db/src/: lib.rs
event_listener/: Cargo.toml
event_listener/src/: main.rs
metadata_worker/: Cargo.toml  Dockerfile
metadata_worker/db/: Cargo.toml
metadata_worker/metadata_worker_common/src/: lib.rs
metadata_worker/src/: main.rs
