[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
db = { path = "../db" }
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hyper = "1"
