[package]
name = "backfill_script"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen"] }
rdkafka = { version = "0.36.0", features = ["cmake-build"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
common = { path = "../common" }
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1" 