[package]
name = "event_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["ws"] }
rdkafka = { version = "0.36.0", features = ["cmake-build", "ssl", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
event_listener_common = { path = "./common" } # <--- THIS LINE IS CHANGED
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
