[package]
name = "metadata_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36.0", features = ["cmake-build", "ssl", "tokio"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
db = { path = "./db" }
metadata_worker_common = { path = "./metadata_worker_common" } # <--- THIS LINE IS NOW CORRECTED
sha2 = "0.10"
aws-sdk-s3 = "1"
tokio-stream = "0.1"
anyhow = "1.0"
aws-config = "1"
