# File: /your_repo_root/api_worker/db/Cargo.toml

[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
common = { path = "../common" } # <--- This path is correct relative to db/
